# brain-games

./: .gitignore  .pyproject.toml.swp  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  engine.py
brain_games/scripts/games/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
