[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This project contains several games with arithmetic questions. During the game user receives questions. If the user gave 3 correct answers in a row, the game ends successfully, but if at least 1 question was answered incorrectly during the game, the game ends with a loss. "
authors = ["Labidahrom <labidahrom@yandex.ru>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/Labidahrom/python-project-lvl1"
classifiers = [
    "Topic :: Games/Entertainment"
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

